2009-01-28  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Removed un-needed transition code + remnants of shadow code
	Made the clutter group containing the texture be created along with
	the class to allow decor to be added to it.
	* matchbox/theme-engines/mb-wm-theme.h
	* matchbox/theme-engines/mb-wm-theme.c:
	Added a field for the image filename (for clutter title bars)
	* matchbox/core/mb-wm-decor.h:
	Allowed a class to extend MBWMDecor
	* matchbox/theme-engines/mb-wm-theme-xml.c:
	Fixed some badly initialised vars (-1 for offsets that may not exist
	in XML)
	* matchbox/theme-engines/mb-wm-theme-png.c:
	Trying to fix issue where offsets in the XML theme were wrongly 
	offsetting buttons

2009-01-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/theme-engines/mb-wm-theme-png.c: remove byte order
	check which only worked in scratchbox :/

2009-01-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.14

2009-01-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Fix positioning of new-style menus. Old-style menus are positioned
	better, but not yet according to layout guide. Fixes: NB#92248
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]: Add support for
	HdWmClientTypeAnimationActor to the texture workaround.
	MBWMCompMgrClutterClientDontPosition and
	MBWMCompMgrClutterClientDontShow.

2009-01-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-decor.c:
	  Don't attempt to create 0-width decor windows.
	  Destroy the decor's XWindow along with the object.

2009-01-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo:
	* matchbox/core/mb-window-manager.c (mb_wm_unfocus_client): Focus next
	client that wants focus. Fixes: NB#93431

2009-01-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-app.c,