@@ -1,3 +1,11 @@
+2009-01-29  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/core/mb-wm-client-base.c
+	(mb_wm_client_move_to_top_recursive): New function.
+	(mb_wm_client_base_stack): Handle transient chain correctly, so that
+	the whole stackable window stack is raised when one of the windows is
+	raised. Patch from Laszlo Pere.
+
 2009-01-28  Gordon Williams  <gordon.williams@collabora.co.uk>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
